Fixing the overlaping of charts over weather-widget

--- a/Dashboard-style.css
+++ b/Dashboard-style.css
@@ -130,6 +130,7 @@ header {
   background: rgba(0, 0, 0, 0.6);
   padding: 15px;
   border-radius: 5px;
+  margin-bottom: 15%;
 }
 
 #toggle-temp {
